Implement pagination on routes that returning an array
