# swagger/v1/swagger.yaml
@@ -73,19 +73,36 @@ paths:
       required: true
       schema:
         type: integer
+    - name: page
+      in: query
+      required: false
+      description: Page number
+      schema:
+        type: integer
+    - name: per_page
+      in: query
+      required: false
+      description: Number of items per page
+      schema:
+        type: integer
     get:
       summary: Retrieves a user’s sleep records
       tags:
       - Sleep Records
       responses:
         '200':
-          description: no sleep records found
+          description: sleep records found
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  "$ref": "#/components/schemas/sleep_record"
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      "$ref": "#/components/schemas/sleep_record"
+                  pagination:
+                    "$ref": "#/components/schemas/pagination"
         '404':
           description: user not found
           content:
@@ -103,14 +120,17 @@ paths:
     post:
       summary: Creates a sleep record
       tags:
-      - SleepRecords
+      - Sleep Records
       responses:
         '201':
           description: sleep record created successfully
-        '404':
-          description: user not found
-        '422':
-          description: user already has an ongoing sleep record
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    "$ref": "#/components/schemas/sleep_record"
   "/api/v1/users/{user_id}/wake_up":
     parameters:
     - name: user_id
@@ -122,20 +142,33 @@ paths:
     post:
       summary: Updates a wake-up record
       tags:
-      - SleepRecords
+      - Sleep Records
       responses:
         '201':
           description: wake up record created successfully
-        '404':
-          description: user not found
-        '422':
-          description: wake up already recorded
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    "$ref": "#/components/schemas/sleep_record"
   "/api/v1/users/{user_id}/feed":
     parameters:
     - name: user_id
       in: path
       description: User ID
       required: true
+      schema:
+        type: integer
+    - name: page
+      in: query
+      description: Page number
+      schema:
+        type: integer
+    - name: per_page
+      in: query
+      description: Records per page
       schema:
         type: integer
     get:
@@ -148,9 +181,14 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  "$ref": "#/components/schemas/sleep_record"
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      "$ref": "#/components/schemas/sleep_record"
+                  pagination:
+                    "$ref": "#/components/schemas/pagination"
         '404':
           description: user not found
           content:
@@ -164,36 +202,18 @@ paths:
       - Users
       responses:
         '200':
-          description: users found
+          description: no users found
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  "$ref": "#/components/schemas/user"
-    post:
-      summary: Creates a user
-      tags:
-      - Users
-      parameters: []
-      responses:
-        '201':
-          description: user created
-          content:
-            application/json:
-              schema:
-                "$ref": "#/components/schemas/user"
-        '422':
-          description: invalid request
-          content:
-            application/json:
-              schema:
-                "$ref": "#/components/schemas/errors"
-      requestBody:
-        content:
-          application/json:
-            schema:
-              "$ref": "#/components/schemas/user_create"
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      "$ref": "#/components/schemas/user"
+                  pagination:
+                    "$ref": "#/components/schemas/pagination"
   "/api/v1/users/{id}":
     parameters:
     - name: id
@@ -212,20 +232,10 @@ paths:
           content:
             application/json:
               schema:
-                "$ref": "#/components/schemas/user"
-        '404':
-          description: user not exists
-          content:
-            application/json:
-              schema:
-                "$ref": "#/components/schemas/errors"
-    delete:
-      summary: Deletes a user
-      tags:
-      - Users
-      responses:
-        '204':
-          description: user deleted
+                type: object
+                properties:
+                  data:
+                    "$ref": "#/components/schemas/user"
         '404':
           description: user not exists
           content:
@@ -234,6 +244,34 @@ paths:
                 "$ref": "#/components/schemas/errors"
 components:
   schemas:
+    pagination:
+      type: object
+      properties:
+        current_page:
+          type: integer
+          example: 1
+        prev_page_url:
+          type: string
+          nullable: true
+          example:
+        prev_page:
+          type: integer
+          nullable: true
+          example:
+        next_page_url:
+          type: string
+          nullable: true
+          example:
+        next_page:
+          type: integer
+          nullable: true
+          example:
+        total_pages:
+          type: integer
+          example: 10
+        total_count:
+          type: integer
+          example: 100
     user:
       type: object
       properties:
